--- a/index.html
+++ b/index.html
@@ -77,6 +77,16 @@
                 <h1>Reported posts</h1>
             </div>
         </main>
+        <section>
+            <h2>How does JavaScript work?</h2>
+            <p>
+
+            </p>
+            <h2>What are the differences between local storage and session storage?</h2>
+            <p>
+                
+            </p>
+        </section>
         <footer></footer>
 
         <!-- add javascript  file  -->
