--- a/index.html
+++ b/index.html
@@ -78,13 +78,16 @@
             </div>
         </main>
         <section>
-            <h2>How does JavaScript work?</h2>
+            <h4>How does JavaScript work?</h4>
+            <p>
+                JavaScript is an interpreted programming language that runs at the client-side or on the client machine inside a browser. Presently all web browsers support
+                JavaScript codes with the help of their JavaScript engines. So whenever a JS code is written and run, the browser loads the web page, parsing HTML it creates
+                the DOM which is the live view of the page contents that can be accessed through JavaScript. Then the CSS is loaded. After the HTML and CSS is put together
+                the JS engine loads the JS files but does not immediately run codes . It lets HTML and CSS to load first, when done JS code is executed from top to bottom order.
+            </p>
+            <h4>What are the differences between local storage and session storage?</h4>
             <p>
 
-            </p>
-            <h2>What are the differences between local storage and session storage?</h2>
-            <p>
-                
             </p>
         </section>
         <footer></footer>
