--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
             </p>
             <h4>What are the differences between local storage and session storage?</h4>
             <p>
-
+                Local storage does not expire but session storage is cleared when the page session ends. The data in session storage is persisted only until the window or tab is
+                closed. But in local storage the data is persisted until the user manually clears browser cache or the web page clears the data. Both local and session 
+                storage can store only strings. On some browser like safari(8.03) local storage has a limit of 2551 k characters but session storage is unlimited in storage.
             </p>
         </section>
         <footer></footer>
